Add endpoint `bottle`
