# swagger/swagger.yaml
@@ -4,6 +4,32 @@ consumes:
 - application/gob
 - application/x-gob
 definitions:
+  GoaExampleBottle:
+    description: A bottle of wine (default view)
+    example:
+      href: Voluptates non excepturi.
+      id: 6.996573674690313e+18
+      name: Tenetur et saepe ratione debitis enim sapiente.
+    properties:
+      href:
+        description: API href for making requests on the bottle
+        example: Voluptates non excepturi.
+        type: string
+      id:
+        description: Unique bottle ID
+        example: 6.996573674690313e+18
+        format: int64
+        type: integer
+      name:
+        description: Name of wine
+        example: Tenetur et saepe ratione debitis enim sapiente.
+        type: string
+    required:
+    - id
+    - href
+    - name
+    title: 'Mediatype identifier: application/vnd.goa.example.bottle+json; view=default'
+    type: object
   error:
     description: Error response media type (default view)
     example:
@@ -42,10 +68,32 @@ definitions:
     title: 'Mediatype identifier: application/vnd.goa.error; view=default'
     type: object
 info:
-  description: An example to serve static assets
-  title: The files example
+  description: A simple goa service
+  title: The virtual wine cellar
   version: ""
 paths:
+  /bottles/{bottleID}:
+    get:
+      description: Get bottle by id
+      operationId: bottle#show
+      parameters:
+      - description: Bottle ID
+        in: path
+        name: bottleID
+        required: true
+        type: integer
+      produces:
+      - application/vnd.goa.example.bottle+json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/GoaExampleBottle'
+        "404":
+          description: Not Found
+      summary: show bottle
+      tags:
+      - bottle
   /docs/swagger.json:
     get:
       operationId: swagger#/docs/swagger.json
@@ -79,4 +127,11 @@ produces:
 - application/xml
 - application/gob
 - application/x-gob
+responses:
+  NotFound:
+    description: Not Found
+  OK:
+    description: OK
+    schema:
+      $ref: '#/definitions/GoaExampleBottle'
 swagger: "2.0"
